<resources>
    <string name="app_name">MyPlaces</string>
    <string name="not_set">Nie ustalono</string>
    <string name="find_me">Znajdź mnie!</string>
    <string name="save">Zapisz</string>
    <string name="title_activity_maps">Map</string>
    <string name="latitude">Szerokość</string>
    <string name="longitude">Długość</string>
    <string name="note">Notka</string>
    <string name="put_note">Wpisz notatkę</string>
    <string name="save_place">Zapisz miejsce</string>
    <string name="saving">Zapisuję!</string>
    <string name="here">Tutaj</string>
</resources>
